--- a/kitools/options.html
+++ b/kitools/options.html
@@ -10,6 +10,7 @@
     <ul class='tab clear'>
       <li><a href='#general' class='red' id='tab_general'>General</a></li>
       <li><a href='#portal' class='green' id='tab_portal'>Portal</a></li>
+      <li><a href='#vpn' class='yellow' id='tab_vpn'>VPN</a></li>
     </ul>
   </div>
   <div id='tab_content' class='tab_content'>
@@ -26,6 +27,10 @@
         <input type='checkbox' name='edamalin' id='edamalin'>
         <small>※ display to Amazon.co.jp whether or not LC has holding.</small>
         <br>
+        <label for='edvpn'>VPN : </label>
+        <input type='checkbox' name='edvpn' id='edvpn'>
+        <small>※ auto login to VPN</small>
+        <br>
         <label></label>
         <button id='general_save'>Save</button>
         <button id='general_delete'>Reset</button>
@@ -34,9 +39,9 @@
 
     <!-- Tab Portal -->
     <div id='portal' class='page'>
-      <fieldset id='registered'>
+      <fieldset class='registered'>
         <legend>Registered?</legend>
-        <p id='bregistered'></p>
+        <p id='p_registered'></p>
       </fieldset>
       <br>
       <fieldset class='field_portal'>
@@ -53,7 +58,35 @@
         <button id='portal_delete'>Delete</button>
       </fieldset>
     </div>
+
+    <!-- Tab VPN -->
+    <div id='vpn' class='page'>
+      <fieldset class='registered'>
+        <legend>Registered?</legend>
+        <p id='v_registered'></p>
+      </fieldset>
+      <br>
+      <fieldset class='field_vpn'>
+        <legend>Register or Change</legend>
+        <br>
+        <label for='vpn-id'>User ID : </label>
+        <input type='text' id='vpn-id' name='vpn-id' placeholder='a1234567'>
+        <br>
+        <label for='vpn-pass'>Password : </label>
+        <input type='password' id='vpn-pass' name='vpn-pass' placeholder='h030519'>
+        <br>
+        <label for='vpn-mode'>Mode : </label>
+        <input type='radio' name='vpn-radio' value='Web' checked><small>Web</small>
+        <input type='radio' name='vpn-radio' value='NetworkConnect'><small>NetworkConnect</small>
+        <br>
+        <label></label>
+        <button id='vpn_save'>Save</button>
+        <button id='vpn_delete'>Delete</button>
+      </fieldset>
+    </div>
   </div>
+
+
 
   <script src='js/cryptico.min.js'></script>
   <script src='js/options.js'></script>
