UIの修正 ・設定の更新が行われたか ・IDとPasswordを設定しているか

--- a/kitools/options.html
+++ b/kitools/options.html
@@ -34,6 +34,7 @@
         <label></label>
         <button id='general_save'>Save</button>
         <button id='general_delete'>Reset</button>
+        <b id='g_registered'></b>
       </fieldset>
     </div>
 
