次回アップデートのための下地を作成 ・Google Calendar APIの認証 ・学生ポータルのページにカレンダー同期のためのページアクションを表示

--- a/kitools/options.html
+++ b/kitools/options.html
@@ -33,7 +33,7 @@
         <br>
         <label></label>
         <button id='general_save'>Save</button>
-        <button id='general_delete'>Reset</button>
+        <button id='general_delete' disabled='disbaled'>Reset</button>
         <b id='g_registered'></b>
       </fieldset>
     </div>
