カレンダー ・ポータルの自動ログインが有効時にカレンダー同期のページアクションを表示 ・カレンダー同期完成（変則日程と大学の行事） UIの修正 ・カレンダー同期のページアクション

--- a/kitools/popup.html
+++ b/kitools/popup.html
@@ -6,6 +6,8 @@
 </head>
 <body class='kitcal'>
   <button id='kit-calendar' class='kit-calendar' tabindex='-1'>K.I.T.のカレンダーを出力</button>
+  <div id='appendcal'>
+  </div>
   <script src='js/popup.js'></script>
 </body>
 </html>
