シャトルバス通知機能追加（β） ・10分前に通知 ・扇が丘↔八束穂は位置情報を取得して自動判断 ・一日一回スケジュールの更新を確認

--- a/kitools/options.html
+++ b/kitools/options.html
@@ -31,6 +31,10 @@
         <input type='checkbox' name='edvpn' id='edvpn'>
         <small>※ VPN に自動ログイン</small>
         <br>
+        <label for='edbus'>Bus : </label>
+        <input type='checkbox' name='edbus' id='edbus'>
+        <small>※ シャトルバス時刻通知（β）</small>
+        <br>
         <label></label>
         <button id='general_save'>保存</button>
         <button id='general_delete' disabled='disbaled'>リセット</button>
