シャトルバス通知機能追加（β） ・通知の際，音を鳴らす ・通知が自動で消えるまでの時間を10秒に変更 ・通知時の画像を行き先によって変える

--- a/kitools/options.html
+++ b/kitools/options.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <link href='css/options.css' rel='stylesheet' type='text/css'>
+  <title>設定 - K.I.Tools</title>
 </head>
 <body>
   <h1>設定</h1>
