--- a/kitools/options.html
+++ b/kitools/options.html
@@ -22,7 +22,7 @@
         <br>
         <label for='edportal'>Portal : </label>
         <input type='checkbox' name='edportal' id='edportal'>
-        <small>※ 学生ポータルに自動ログイン</small>
+        <small>※ 学生ポータル，給与明細照会，見積依頼に自動ログイン</small>
         <br>
         <label for='edamalin'>AmaLin : </label>
         <input type='checkbox' name='edamalin' id='edamalin'>
