シャトルバス通知機能（β） ・バスデータ取得をライブラリ化

--- a/kitools/popup.html
+++ b/kitools/popup.html
@@ -4,9 +4,10 @@
   <meta charset='utf-8'>
     <link href='css/popup.css' rel='stylesheet' type='text/css'>
 </head>
-<body class='kitcal'>
-  <button id='kit-calendar' class='kit-calendar' tabindex='-1'>K.I.T.のカレンダーを出力</button>
-  <div id='appendcal'>
+<body>
+  <div class='kitcal'>
+    <button id='kit-calendar' class='kit-calendar' tabindex='-1'>K.I.T.のカレンダーを出力</button>
+    <div id='appendcal'></div>
   </div>
   <script src='js/popup.js'></script>
 </body>
