--- a/kitools/options.html
+++ b/kitools/options.html
@@ -92,7 +92,8 @@
     </div>
   </div>
 
-  <script src='js/cryptico.min.js'></script>
+  <script src='js/lib/cryptico.min.js'></script>
+  <script src='js/lib/tab.js'></script>
   <script src='js/options.js'></script>
 </body>
 </html>
