リファクタリング ・日付と時間取得をライブラリ化 ・.crx廃止によるコードの削除 ・popup.js -> calendar.js ・その他細かい修正

--- a/kitools/popup.html
+++ b/kitools/popup.html
@@ -86,7 +86,8 @@
   </div>
 
   <script src='js/lib/tab.js'></script>
-  <script src='js/popup.js'></script>
+  <script src='js/lib/getnowdate.js'></script>
+  <script src='js/calendar.js'></script>
   <script src='js/busschedule.js'></script>
 </body>
 </html>
