--- a/kitools/popup.html
+++ b/kitools/popup.html
@@ -18,8 +18,8 @@
     <div id='bus_time' class='page'>
       <div id='time_menu'>
         <ul class='tab clear'>
-          <li><a href='#o2y' class='black' id='tab_ohgi'>扇が丘→やつかほ</a></li>
-          <li><a href='#y2o' class='brown' id='tab_yatsukaho'>やつかほ→扇が丘</a></li>
+          <li><a href='#o2y' class='black' id='tab_ohgi'>扇が丘 → やつかほ</a></li>
+          <li><a href='#y2o' class='brown' id='tab_yatsukaho'>やつかほ → 扇が丘</a></li>
         </ul>
       </div>
       <div id='time_content' class='time_content'>
@@ -87,6 +87,7 @@
 
   <script src='js/lib/tab.js'></script>
   <script src='js/lib/getnowdate.js'></script>
+  <script src='js/popup.js'></script>
   <script src='js/calendar.js'></script>
   <script src='js/busschedule.js'></script>
 </body>
