--- a/bus/popup.html
+++ b/bus/popup.html
@@ -2,9 +2,9 @@
 <html lang='ja'>
 <head>
   <meta charset='utf-8'>
-  <link href='css/popup.css' rel='stylesheet' type='text/css'>
-  <link href='css/ion.tabs.css' rel='stylesheet' type='text/css'>
-  <link href='css/ion.tabs.skinFlat.css' rel='stylesheet' type='text/css'>
+  <link href='assets/css/ion.tabs.css' rel='stylesheet' type='text/css'>
+  <link href='assets/css/ion.tabs.skinFlat.css' rel='stylesheet' type='text/css'>
+  <link href='assets/css/popup.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class='ionTabs' id='tabs_bus' data-name='tabs_group_bus'>
@@ -88,11 +88,11 @@
 </div>
 <div id='last_update'></div>
 
-<script src='js/lib/jquery.min.js'></script>
-<script src='js/lib/ion.tabs.js'></script>
-<script src='js/popup.js'></script>
-<script src='js/lib/getnowdate.js'></script>
-<script src='js/busschedule.js'></script>
-<script src='js/locales.js'></script>
+<script src='assets/js/lib/jquery.min.js'></script>
+<script src='assets/js/lib/ion.tabs.js'></script>
+<script src='assets/js/popup.js'></script>
+<script src='assets/js/lib/getnowdate.js'></script>
+<script src='assets/js/busschedule.js'></script>
+<script src='assets/js/locales.js'></script>
 </body>
 </html>
