シャトルバス改修     細かい修正     バス通知音の大きさを変更可能

--- a/bus/options.html
+++ b/bus/options.html
@@ -5,6 +5,7 @@
   <link href='assets/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
   <link href='assets/css/itoggle.css' rel='stylesheet' type='text/css'>
   <link href='assets/css/easydropdown.metro.css' rel='stylesheet' type='text/css'>
+  <link href='assets/css/freshstyle.css' rel='stylesheet' type='text/css'>
   <link href='assets/css/options.css' rel='stylesheet' type='text/css'>
   <title data-resource='optionsTitle'></title>
 </head>
@@ -38,6 +39,16 @@
               </select>
             </div>
           </div>
+
+          <div class='form-group'>
+            <label class='col-lg-5 control-label' data-resource='optionsLabelBusNotifySoundVolume'></label>
+            <div class='col-lg-5'>
+              <div class='notify_volume'></div>
+              <input class='save' name='notify_volume' type='hidden'>
+              <button type='button' class='btn btn-success btn-sm' id='play_sound'>♪</button>
+            </div>
+          </div>
+
         </form>
       </div>
     </section>
@@ -49,6 +60,7 @@
 <script src='assets/js/lib/jquery.DataSaver.js'></script>
 <script src='assets/js/lib/itoggle.jquery.js'></script>
 <script src='assets/js/lib/jquery.easydropdown.js'></script>
+<script src='assets/js/lib/freshslider.1.0.min.js'></script>
 <script src='assets/js/options.js'></script>
 <script src='assets/js/locales.js'></script>
 </body>
