シャトルバス改修     細かい修正     バス通知時刻を変更可能

--- a/bus/options.html
+++ b/bus/options.html
@@ -49,6 +49,14 @@
             </div>
           </div>
 
+          <div class='form-group'>
+            <label class='col-lg-5 control-label' data-resource='optionsLabelBusNotifyMinutesAgo'></label>
+            <div class='col-lg-5'>
+              <input class='save' name='notify_minutes' type='number'>
+              <b data-resource='optionsLabelBusNotifyMinutesAgo2'></b>
+            </div>
+          </div>
+
         </form>
       </div>
     </section>
